integration_tests/codegen_fail/fail/scalar_value/derive_on_struct.rs
#[derive(juniper::GraphQLScalarValue)]
struct ScalarValue;

fn main() {}
