integration_tests/codegen_fail/fail/scalar_value/derive_on_struct.stderr
error: GraphQL built-in scalars can only be derived for enums
 --> fail/scalar_value/derive_on_struct.rs:2:1
  |
2 | struct ScalarValue;
  | ^^^^^^^^^^^^^^^^^^^
